--- a/style/winScreen.css
+++ b/style/winScreen.css
@@ -11,6 +11,10 @@
     left: 30%;
     z-index: 500;
     box-sizing: content-box;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -ms-transition: 1s;
+    -o-transition: 1s;
     transition: 1s;
 }
 .winContainer{
@@ -19,8 +23,13 @@
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 3px;
     position: relative;
-    top: 4%;
+    top: 50%;
     left: 30%;
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
     text-align: center;
 }
 #winTitle{
