--- a/style/caseSelector.css
+++ b/style/caseSelector.css
@@ -6,9 +6,13 @@
     background: url("../images/caseWall.png") rgb(226, 217, 209) no-repeat;
     background-size: 100% 100%;
     position: absolute;
-    top: 5vh;
+    bottom: 1vh;
     left: 5vw;
     z-index: 200;
+    -webkit-transition: 1s;
+    -moz-transition: 1s;
+    -ms-transition: 1s;
+    -o-transition: 1s;
     transition: 1s;
 }
 .open{
