--- a/style/style.css
+++ b/style/style.css
@@ -18,13 +18,17 @@ body{
 #caseStats{
     width: 33%;
     color: #ffffff;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: bold;
 }
 #title{
-    width: 33%;
+    width: 100%;
     text-align: center;
     font-size: 0.25em;
+    vertical-align: text-bottom;
+    position: absolute;
+    left: 0;
+    top: 3.5%;
 }
 .letterSquare{
     font-size: 2.5rem;
@@ -33,30 +37,39 @@ body{
     background: #ffffff;
     border: 1px solid #000000;
 }
-#caseFiles{
+#gameOptions{
     width: 100%;
     margin-top: 1%;
 }
-#caseFiles .subtitle{
+#gameOptions .subtitle{
+    width: 20%;
     font-size: 1.2em;
     color: #ffffff;
-    margin-left: 2%;
-    margin-right:5%;
+    text-align: right;
+    padding: 0 2%;
 }
 .file{
     width: 14.75%;
-    padding: 0.5em 5px;
+    padding: 0.5em 1em;
     margin-right: -4px;
     font-size: 0.9em;
     font-family: "Courier New", "courier", monospace;
     white-space: nowrap;
     text-align: center;
-    background: #ead295;
+    background-color: #ead295;
     border-right: 1px solid rgba(96, 64, 32, 0.2);
     border-radius: 5px 5px 0 0;
     box-shadow: 6px 0 25px -10px #604020 inset;
+    cursor: pointer;
 }
-
+.file#currentCase{
+    width: auto;
+    cursor: default;
+}
+.file.resetCase:hover, .file.newCase:hover, #aboutGame:hover{
+    text-decoration: underline;
+    background-color: #e1c06a;
+}
 .subtitle{
     text-align: center;
 }
