correct background images to be loaded

--- a/style/winScreen.css
+++ b/style/winScreen.css
@@ -2,7 +2,7 @@
     width: 60vw;
     height: 35vw;
     margin: 1% 0;
-    background: url("../images/sherlockAndJohn.png") rgb(226, 217, 209) no-repeat;
+    background: url("../images/sherlockAndJohn.jpg") rgb(226, 217, 209) no-repeat;
     background-size: 100% auto;
     border: 10px solid #5B5D57;
     border-radius: 10px;
