--- a/style/caseSelector.css
+++ b/style/caseSelector.css
@@ -3,7 +3,7 @@
     height: 90vh;
     border: 10px solid #5B5D57;
     border-radius: 10px;
-    background: url("../images/caseWall.png") rgb(226, 217, 209) no-repeat;
+    background: url("../images/caseWall.jpg") rgb(226, 217, 209) no-repeat;
     background-size: 100% 100%;
     position: absolute;
     bottom: 1vh;
